--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "commander": "^2.9.0",
     "promptly": "^2.1.0",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^3.15.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-mocha": "^4.8.0",
+    "eslint-plugin-promise": "^3.4.1",
+    "eslint-plugin-standard": "^2.0.1"
   }
 }
